✨ feat(portfolio): inicializa estrutura do portfólio pessoal
Adiciona configuração otimizada do Next.js com headers de segurança e otimização de imagens.

Atualiza package.json com metadados do projeto, incluindo descrição, palavras-chave e autor.

Refatora layout raiz para incluir header e footer personalizados, com metadados otimizados para SEO.

Substitui página inicial por seções de hero, projetos em destaque e habilidades, criando uma experiência de portfólio completa.

Expande .gitignore para ignorar arquivos comuns de IDE e sistema operacional.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jonassoaress",
   "version": "0.1.0",
+  "description": "Portfólio pessoal desenvolvido com Next.js",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -23,5 +24,15 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "@eslint/eslintrc": "^3"
-  }
+  },
+  "keywords": [
+    "nextjs",
+    "react",
+    "portfolio",
+    "jonassoaress",
+    "typescript",
+    "tailwindcss"
+  ],
+  "author": "Jonas Soares",
+  "license": "MIT"
 }
